tests/neg/with-type-operator-future-migration.scala
//> using options -Werror

import scala.language.`future-migration`

def foo: Int with String = ??? // error
