tests/neg/with-type-operator-future-migration.check
-- [E003] Syntax Error: tests/neg/with-type-operator-future-migration.scala:5:13 ---------------------------------------
5 |def foo: Int with String = ??? // error
  |             ^^^^
  |             with as a type operator has been deprecated; use & instead
  |             This construct can be rewritten automatically under -rewrite -source 3.4-migration.
  |
  | longer explanation available when compiling with `-explain`
